<package>
  <name>rotors_description</name>
  <version>4.0.1</version>
  <description>The rotors_description package provides URDF models of the AscTec multicopters.</description>

  <maintainer email="giuseppe.silano@fel.cvut.cz">Giuseppe Silano</maintainer>

  <author>Giuseppe Silano</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/gsilano/rotors_simulator</url>
  <url type="bugtracker">https://github.com/gsilano/rotors_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
